--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "friendsofphp/php-cs-fixer": "^3.25",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
+        "laravel/telescope": "^4.16",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.0",
