--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "nwidart/laravel-modules": "^10.0",
         "opcodesio/log-viewer": "^3.1"
     },
     "require-dev": {
