configuraciones para apis iflow y newsan

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,13 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_PORT=8002
+
+L5_SWAGGER_CONST_HOST="http://localhost:8002/api/v1"
+
+IFLOW_HOST="http://api.iflow21.com/api"
+
+NEWSAN_HOST="https://api.iflow21.com/api"
+NEWSAN_KEY="https://feff20170bdab3b5496bbe626dc8bbb1"
+NEWSAN_USER="IFLOW"
