configuracion del job y el schedule para notificar a NewSan

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,8 @@ APP_PORT=8002
 L5_SWAGGER_CONST_HOST="http://localhost:8002/api/v1"
 
 IFLOW_HOST="http://api.iflow21.com/api"
+IFLOW_USER="newsanprod"
+IFLOW_PASS="New5an.2021&"
 
 NEWSAN_HOST="https://api.newsan.com.ar/api/notifications/"
 NEWSAN_KEY="feff20170bdab3b5496bbe626dc8bbb1"
