--- a/docker/8.2/Dockerfile
+++ b/docker/8.2/Dockerfile
@@ -55,6 +55,7 @@ RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
 COPY start-container /usr/local/bin/start-container
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY php.ini /etc/php/8.2/cli/conf.d/99-sail.ini
+COPY xdebug.ini /etc/php/8.2/cli/conf.d/99-xdebug.ini
 COPY my-cron-file /etc/cron.d/my-cron-file
 RUN chmod +x /usr/local/bin/start-container
 RUN chmod 0644 /etc/cron.d/my-cron-file
