--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,18 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8002
+FRONTEND_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=iflow
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,7 +25,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -59,6 +60,7 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 APP_PORT=8002
+SAIL_XDEBUG_MODE=develop,debug,coverage
 
 L5_SWAGGER_CONST_HOST="http://localhost:8002/api/v1"
 
@@ -66,6 +68,6 @@ IFLOW_HOST="http://api.iflow21.com/api"
 IFLOW_USER="newsanprod"
 IFLOW_PASS="New5an.2021&"
 
-NEWSAN_HOST="https://api.newsan.com.ar/api/notifications/"
+NEWSAN_HOST="https://api.newsan.com.ar/api"
 NEWSAN_KEY="feff20170bdab3b5496bbe626dc8bbb1"
 NEWSAN_USER="IFLOW"
