cambios para implementacion de entorno staging

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 APP_NAME=Iflow
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:5BUN8N3RIDTLvzIdIuW/0sU9nGi467TkjPggBRNUygM=
 APP_DEBUG=true
 APP_URL=http://localhost:8002
 FRONTEND_URL=http://localhost:3000
@@ -58,6 +58,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
+MEILISEARCH_NO_ANALYTICS=false
 
 APP_PORT=8002
 SAIL_XDEBUG_MODE=develop,debug,coverage
