cambio en .env.staging para entorno

--- a/.env.staging
+++ b/.env.staging
@@ -65,6 +65,12 @@ MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_NO_ANALYTICS=false
 
 APP_PORT=8003
+FORWARD_DB_PORT=3307
+FORWARD_REDIS_PORT=6380
+FORWARD_MEILISEARCH_PORT=7701
+FORWARD_MAILPIT_PORT=1026
+FORWARD_MAILPIT_DASHBOARD_PORT=8026
+VITE_PORT=5174
 SAIL_XDEBUG_MODE=develop,debug,coverage
 
 L5_SWAGGER_CONST_HOST="http://localhost:8003/api/v1"
